Styles/footer.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
img{
    width: 100%;
}
footer{
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    padding: 0;
    background-color:rgb(35, 36, 60) ;
    color: white;
}
footer .f-container{
    display: flex;
    margin: 5%;
} 
#footer-para{
    width: 40%;
    margin-left: 15%;
}
.footer-row ul li a{
    text-decoration: none;
    color: white;
}
.footer-row ul li{
    margin: 15%;
    list-style: none;
}
.end-note{
    background-color: black;
    display: flex;
    justify-content:space-between;
}
.footer-row h4{
    text-align: center;
}
@media all and (max-width:750px){
    footer .f-container{
        flex-direction: column;
    }
    footer .hide-footer{
        display: none;
        margin: 0;
    }
    .footer-row ul li{
        margin: 10px;
    }
}

